<resources>
    <string name="app_name">chatApp</string>
    <string name="register_account">Register Account</string>
    <string name="already_have_an_account_login">Already have an Account?:Login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="description">this is not your username or pin. This name will be visible to Your Whatsapp Contact</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_status">Update</string>
    <string name="search_user_here">Search user here...</string>
    <string name="message">write message here...</string>
    <string name="message_from_sender">message from sender</string>
    <string name="message_from_receiver">message from receiver</string>
    <string name="latest_message">latest_message</string>
</resources>
